// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Icon /> CustomColor story renders snapshot 1`] = `
<svg
  aria-hidden="true"
  class="icon"
  fill="#A6A3EE"
  height="2em"
  style="--icon-size: 2em;"
  viewBox="0 0 24 24"
  width="2em"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M6.4 19L5 17.6L10.6 12L5 6.4L6.4 5L12 10.6L17.6 5L19 6.4L13.4 12L19 17.6L17.6 19L12 13.4L6.4 19Z"
  />
</svg>
`;

exports[`<Icon /> Default story renders snapshot 1`] = `
<svg
  aria-hidden="true"
  class="icon"
  fill="currentColor"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M6.4 19L5 17.6L10.6 12L5 6.4L6.4 5L12 10.6L17.6 5L19 6.4L13.4 12L19 17.6L17.6 19L12 13.4L6.4 19Z"
  />
</svg>
`;

exports[`<Icon /> FullScreen story renders snapshot 1`] = `
<svg
  aria-hidden="true"
  class="icon"
  fill="currentColor"
  height="100vh"
  style="--icon-size: 100vh;"
  viewBox="0 0 24 24"
  width="100vh"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M6.4 19L5 17.6L10.6 12L5 6.4L6.4 5L12 10.6L17.6 5L19 6.4L13.4 12L19 17.6L17.6 19L12 13.4L6.4 19Z"
  />
</svg>
`;

exports[`<Icon /> InText story renders snapshot 1`] = `
<p
  class="text text--body"
>
  The svg icon defaults to the surrounding text size (
  <svg
    class="icon"
    fill="currentColor"
    role="img"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title
      id="6"
    >
      icon with 1em line height
    </title>
    <path
      d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 3c1.66 0 3 1.34 3 3s-1.34 3-3 3-3-1.34-3-3 1.34-3 3-3zm0 14.2c-2.5 0-4.71-1.28-6-3.22.03-1.99 4-3.08 6-3.08 1.99 0 5.97 1.09 6 3.08-1.29 1.94-3.5 3.22-6 3.22z"
    />
  </svg>
  ; 1em), but often looks better with the line height (
  <svg
    class="icon"
    fill="currentColor"
    height="2em"
    role="img"
    style="--icon-size: 2em;"
    viewBox="0 0 24 24"
    width="2em"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title
      id="7"
    >
      icon with 2em line height
    </title>
    <path
      d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 3c1.66 0 3 1.34 3 3s-1.34 3-3 3-3-1.34-3-3 1.34-3 3-3zm0 14.2c-2.5 0-4.71-1.28-6-3.22.03-1.99 4-3.08 6-3.08 1.99 0 5.97 1.09 6 3.08-1.29 1.94-3.5 3.22-6 3.22z"
    />
  </svg>
  ; 2em) which is harder to determine. Take a look at the icons available in
   
  <a
    href="https://material-ui.com/components/material-icons/"
    rel="noreferrer"
    target="_blank"
  >
    https://material-ui.com/components/material-icons/
  </a>
  , currently we only support the filled icons.
</p>
`;

exports[`<Icon /> Large story renders snapshot 1`] = `
<svg
  aria-hidden="true"
  class="icon"
  fill="currentColor"
  height="4em"
  style="--icon-size: 4em;"
  viewBox="0 0 24 24"
  width="4em"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M6.4 19L5 17.6L10.6 12L5 6.4L6.4 5L12 10.6L17.6 5L19 6.4L13.4 12L19 17.6L17.6 19L12 13.4L6.4 19Z"
  />
</svg>
`;

exports[`<Icon /> Medium story renders snapshot 1`] = `
<svg
  aria-hidden="true"
  class="icon"
  fill="currentColor"
  height="2em"
  style="--icon-size: 2em;"
  viewBox="0 0 24 24"
  width="2em"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M6.4 19L5 17.6L10.6 12L5 6.4L6.4 5L12 10.6L17.6 5L19 6.4L13.4 12L19 17.6L17.6 19L12 13.4L6.4 19Z"
  />
</svg>
`;

exports[`<Icon /> WithChildrenSvg story renders snapshot 1`] = `
<svg
  aria-hidden="true"
  class="icon"
  fill="currentColor"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M11.6144 8.96051C12.2524 7.61848 13.9514 4.56304 14.905 3C15.5557 3.28671 16.1844 3.61871 16.7863 3.99342C15.9964 5.50177 14.2272 8.6643 13.5144 9.87646C14.7414 9.45266 18.4783 8.3362 20.1657 7.89646C20.4765 8.60506 20.8294 9.55291 21 10.0815C19.0439 10.5737 15.0872 11.5078 13.699 11.8109C15.335 12.2848 17.9431 13.0914 19.8642 13.7408C19.6118 14.2352 19.0345 15.2354 18.6209 15.9122C17.034 15.3311 15.0639 14.5451 13.4794 13.8934C13.9 14.3491 16.8143 17.8329 17.5178 18.7147C17.1322 19.2023 16.4217 20.0157 15.9566 20.5101C14.6058 18.7876 13.1522 16.819 12.0047 15.2149C12.0911 16.0785 12.3412 19.4119 12.43 20.8701C11.764 20.9339 10.8455 20.9841 10.093 21C10.0345 18.7739 10.0065 16.9648 10.0088 15.7253C9.39652 16.6367 7.40068 19.4734 6.97066 20.0544C6.58504 19.7263 5.80213 18.9152 5.48429 18.5985C6.41911 17.2975 8.24201 14.9939 9.14412 13.8957C8.24435 14.1965 4.57518 15.3266 3.53519 15.6046C3.35991 15.0418 3.11685 14.1076 3 13.5334C4.11945 13.2395 7.56661 12.4352 8.98987 12.1322C8.04103 11.5603 5.13607 9.68506 3.88574 8.81013C4.35316 8.17671 4.91872 7.48633 5.43521 6.88481C6.44015 7.60709 8.7772 9.32734 9.5718 9.92203C9.00857 7.9238 8.57388 5.88 8.13918 3.57646C8.9025 3.38437 9.67878 3.24503 10.4622 3.15949C10.6679 4.05949 11.4298 8.09468 11.6144 8.96051Z"
  />
</svg>
`;
